@@ -2,6 +2,7 @@ arcbios.cc  ARCBIOS emulation
 dec_prom.cc  DECstation PROM emulation
 dreamcast.cc  Dreamcast PROM emulation
 dreamcast_scramble.cc  Dreamcast emulation (helper module)
+luna88kprom.cc  LUNA 88K PROM emulation
 mvmeprom.cc  MVME PROM emulation
 of.cc  OpenFirmware emulation
 ps2_bios.cc  Playstation 2 SIFBIOS emulation
